--- a/client/src/components/Home/HomePage/Post/UserData/UserData.css
+++ b/client/src/components/Home/HomePage/Post/UserData/UserData.css
@@ -2,7 +2,6 @@
   display: flex;
   align-content: center;
   padding: 15px 0;
-  height: 50px;
   background-color: white;
   color: #191414;
   border-top: 1px solid lightgray;
